# github-runners-for-repo

./: .env.example  .gitignore  .gitleaks.toml  .pr-issue-link-canary.md  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.archgate/: config.json
.archgate/adrs/: ARCH-001-pr-only-and-issue-link.md  ARCH-001-pr-only-and-issue-link.rules.ts  ARCH-002-main-branch-protection.md  ARCH-002-main-branch-protection.rules.ts  ARCH-003-uv-only-toolchain.md  ARCH-003-uv-only-toolchain.rules.ts  ARCH-004-coverage-floor-95.md  ARCH-004-coverage-floor-95.rules.ts  ARCH-005-stacked-pr-phasing.md  ARCH-005-stacked-pr-phasing.rules.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  protection-payload-phase-a.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: archgate.yml  build.yml  coverage.yml  deptry-pip-audit.yml  lint.yml  pr-issue-link.yml  runner-health.yml  secrets-scan.yml  test.yml  ty.yml
.omc/drafts/: README.md
.omc/plans/: ralplan-python-modernize-shiftleft.md
.omc/research/: README.md
.omc/specs/: deep-interview-python-modernize-shiftleft.md
.omc/wiki/: README.md
docs/: branch-protection.md
github_runners_for_repo/: __init__.py  cli.py  config.py  github_api.py  runner_manager.py
github_runners_for_repo/scripts/: provision-host.sh
runner/: Dockerfile  start.sh
specs/: PIPELINES.md  architecture.md
tests/: test_check_cov_threshold_drift.py  test_check_pr_link.py  test_cli.py  test_config.py  test_github_api.py  test_runner_manager.py
tools/: check_cov_threshold_drift.py  check_pr_link.py
tools/pipeline_runner/: pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  build.py  cli.py  coverage.py  lint.py  runner.py  test.py
