[project]
name = "github-runners-for-repo"
version = "0.1.0"
description = "Zero-install containerized GitHub Actions self-hosted runners for a specific repository"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32,<3",
    "python-dotenv>=1.1,<2",
]

[project.scripts]
gh-runners = "github_runners_for_repo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["github_runners_for_repo"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.0,<7",
    "ruff>=0.12,<1",
    "ty>=0.0.1a5",
    "deptry>=0.23.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.0,<5",
]

[tool.uv]
managed = true
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["github_runners_for_repo"]

[tool.coverage.report]
fail_under = 95

[tool.ty.src]
include = ["github_runners_for_repo"]

[tool.ty.environment]
python-version = "3.11"

[tool.deptry.package_module_name_map]
"pytest" = "_pytest"
"pytest-cov" = "pytest_cov"
