[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = "Zero-install CI pipeline runner for github-runners-for-repo"
authors = []
packages = [{include = "pipeline_runner", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
pipeline-runner = "pipeline_runner.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
